增加pc端界面