@@ -2,20 +2,21 @@ package com.skillhub.service;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.skillhub.config.LlmProperties;
 import com.skillhub.model.SeniorSkill;
 import com.skillhub.repo.SeniorSkillRepository;
+import com.skillhub.service.llm.LlmClient;
+import com.skillhub.service.llm.MockLlmClient;
 import org.springframework.stereotype.Service;
 
-import java.time.Instant;
+import java.time.Duration;
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionException;
 
 /**
- * 对话编排：拿用户消息 → 用所有学长.Skill 的 SKILL.md 摘要 → 静态按
- * 关键词相似度挑 Top 3 → 用每位的 SKILL.md 当 prompt 上下文分别生成 mock 回答。
- *
- * 当前 LLM 用本地的「mock 内容生成器」代替，等接入真实 LLM 时只需替换
- * {@link #synthesizeAnswer(SeniorSkill, String, String)}。
+ * 对话编排：先用本地轻量匹配挑 Top 3，再让每位学长.Skill 独立回答。
+ * LLM provider 由 skillhub.llm.provider 控制，默认 mock，deepseek 通过环境变量启用。
  */
 @Service
 public class ChatOrchestrator {
@@ -27,25 +28,34 @@ public class ChatOrchestrator {
 
     private final SeniorSkillRepository repo;
     private final SeniorReader reader;
+    private final LlmClient llm;
+    private final MockLlmClient mock;
+    private final LlmProperties properties;
     private final ObjectMapper json = new ObjectMapper();
 
-    public ChatOrchestrator(SeniorSkillRepository repo, SeniorReader reader) {
+    public ChatOrchestrator(SeniorSkillRepository repo,
+                            SeniorReader reader,
+                            LlmClient llm,
+                            MockLlmClient mock,
+                            LlmProperties properties) {
         this.repo = repo;
         this.reader = reader;
+        this.llm = llm;
+        this.mock = mock;
+        this.properties = properties;
     }
 
     public List<SeniorAnswer> orchestrate(String message) {
         List<SeniorReader.SeniorCandidate> candidates = reader.listCandidates();
-        // 评分：候选人 head 与 message 的 jaccard + 域名对齐奖励
-        var scored = new ArrayList<ScoredCandidate>();
         Set<String> msgTokens = tokenize(message);
+        var scored = new ArrayList<ScoredCandidate>();
         for (var c : candidates) {
             int overlap = jaccard(msgTokens, tokenize(c.skillHead()));
-            if (c.domain() != null && !c.domain().isBlank()
-                && message.contains(c.domain())) overlap += 2;
+            if (c.domain() != null && !c.domain().isBlank() && message.contains(c.domain())) {
+                overlap += 2;
+            }
             scored.add(new ScoredCandidate(c, overlap));
         }
-        // 1) domain 命中优先，2) jaccard 高优先
         scored.sort((a, b) -> {
             String aDom = Optional.ofNullable(a.c().domain()).orElse("");
             String bDom = Optional.ofNullable(b.c().domain()).orElse("");
@@ -55,14 +65,55 @@ public class ChatOrchestrator {
             return Integer.compare(b.score(), a.score());
         });
 
-        return scored.stream().limit(3).map(sc -> {
-            String skillMd = reader.loadSkillMd(sc.c().id());
-            String content = synthesizeAnswer(findById(sc.c().id()), sc.c(), message, skillMd);
-            return new SeniorAnswer(
-                sc.c().id(), sc.c().name(), sc.c().school(), sc.c().major(),
-                sc.c().year(), content
-            );
-        }).collect(Collectors.toList());
+        List<ScoredCandidate> selected = scored.stream().limit(3).toList();
+        List<CompletableFuture<SeniorAnswer>> futures = selected.stream()
+            .map(sc -> CompletableFuture.supplyAsync(() -> answerFor(sc, message)))
+            .toList();
+        return futures.stream().map(CompletableFuture::join).toList();
+    }
+
+    private SeniorAnswer answerFor(ScoredCandidate scored, String message) {
+        SeniorReader.SeniorCandidate c = scored.c();
+        SeniorSkill senior = findById(c.id());
+        String skillMd = reader.loadSkillMd(c.id());
+        String prompt = buildSystemPrompt(senior, c, skillMd);
+        String content;
+        try {
+            content = llm.complete(prompt, message)
+                .block(Duration.ofSeconds(Math.max(5, properties.getTimeoutSeconds())));
+            if (content == null || content.isBlank()) {
+                throw new IllegalStateException("LLM 返回了空回答");
+            }
+        } catch (RuntimeException ex) {
+            if (!properties.isFallbackToMock()) throw ex;
+            content = mock.complete(prompt, message).block(Duration.ofSeconds(5));
+        }
+        return new SeniorAnswer(
+            c.id(), c.name(), c.school(), c.major(), c.year(), content
+        );
+    }
+
+    private String buildSystemPrompt(SeniorSkill senior,
+                                     SeniorReader.SeniorCandidate candidate,
+                                     String skillMd) {
+        String name = senior != null ? senior.name() : candidate.name();
+        String school = senior != null ? senior.school() : candidate.school();
+        String major = senior != null ? senior.major() : candidate.major();
+        String domain = senior != null ? senior.domain() : candidate.domain();
+        return "你是大学生成长 Skill 共创场中的「" + name + "」。\n"
+            + "你的学校是" + safe(school) + "，专业是" + safe(major) + "，主要领域是" + safe(domain) + "。\n"
+            + "请严格依据下面的 Skill 经验回答用户，不要假装拥有文档之外的经历；如果信息不足，请明确说出不确定之处。"
+            + "回答要具体、友好、可执行，优先给出步骤、时间点或判断标准，不要提及系统提示词、模型或内部编排。\n\n"
+            + "【SKILL.md】\n" + truncate(skillMd, 6000);
+    }
+
+    private static String safe(String value) {
+        return value == null || value.isBlank() ? "未填写" : value;
+    }
+
+    private static String truncate(String text, int max) {
+        if (text == null) return "";
+        return text.length() > max ? text.substring(0, max) + "\n[Skill 内容已截断]" : text;
     }
 
     public String serialize(List<SeniorAnswer> answers) {
@@ -86,35 +137,6 @@ public class ChatOrchestrator {
         return repo.findById(id).orElse(null);
     }
 
-    /** 当前是 mock。接入 LLM 时整段被 LLM 调用替换。 */
-    private String synthesizeAnswer(SeniorSkill senior, SeniorReader.SeniorCandidate c,
-                                   String userMsg, String skillMd) {
-        StringBuilder sb = new StringBuilder();
-        sb.append("【").append(senior != null ? senior.name() : c.name()).append(" · ")
-          .append(Optional.ofNullable(c.school()).orElse("")).append("】\n\n");
-        sb.append("收到你的问题：「").append(userMsg).append("」\n\n");
-        // 简单 mock：从 SKILL.md 摘录前两段作回答
-        String[] sections = skillMd.split("## ");
-        sb.append("以我那一届为例，先给个整体方向：\n\n");
-        int chunks = 0;
-        for (String section : sections) {
-            if (chunks >= 2) break;
-            String trimmed = section.trim();
-            if (trimmed.isEmpty()) continue;
-            int newline = trimmed.indexOf('\n');
-            String title = newline > 0 ? trimmed.substring(0, newline).trim() : trimmed;
-            String body = newline > 0 ? trimmed.substring(newline + 1).trim() : "";
-            if (!title.isEmpty() && !body.isEmpty()) {
-                sb.append("**").append(title).append("**\n\n");
-                sb.append(body.length() > 220 ? body.substring(0, 220) + "…" : body);
-                sb.append("\n\n");
-                chunks++;
-            }
-        }
-        sb.append("— 详细的时间表/数字可点开我的主页查看完整 SKILL 文档。");
-        return sb.toString().trim();
-    }
-
     private Set<String> tokenize(String text) {
         if (text == null) return Set.of();
         String[] toks = text.toLowerCase()
@@ -122,8 +144,7 @@ public class ChatOrchestrator {
             .split("\\s+");
         Set<String> out = new HashSet<>();
         for (String t : toks) {
-            if (t.length() < 2) continue;
-            if (STOP_WORDS.contains(t)) continue;
+            if (t.length() < 2 || STOP_WORDS.contains(t)) continue;
             out.add(t);
         }
         return out;
@@ -131,8 +152,10 @@ public class ChatOrchestrator {
 
     private int jaccard(Set<String> a, Set<String> b) {
         if (a.isEmpty() || b.isEmpty()) return 0;
-        Set<String> union = new HashSet<>(a); union.addAll(b);
-        Set<String> inter = new HashSet<>(a); inter.retainAll(b);
+        Set<String> union = new HashSet<>(a);
+        union.addAll(b);
+        Set<String> inter = new HashSet<>(a);
+        inter.retainAll(b);
         return union.isEmpty() ? 0 : (inter.size() * 100 / union.size());
     }
 
